TWC3167-4818: Deal info column options, when single option is selected the data is not aligned fixed (#2490)

--- a/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
@@ -1313,7 +1313,8 @@ kendo-dialog.ok-button-color-change kendo-dialog-actions button.first-child-btn:
 #capYcs2Col,
 #tdsCol {
     position: relative;
-    top: 25%
+    top: 25%;
+    display:flex;
 }
 
 .fullHeight {
